--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "benchmark": "jest --config config/jest/jest.bench.config.js --verbose --runInBand",
     "benchmark:json": "BENCHMARK_OUTPUT=./benchmarks/benchmark-results.json NODE_OPTIONS=--expose-gc npm run benchmark",
     "benchmark:compare": "node ./scripts/compare-benchmarks.mjs ./benchmarks/baseline.json ./benchmarks/benchmark-results.json ./benchmarks/benchmarks.config.json",
-    "guide:compose": "node ./scripts/compose-readme.mjs"
+    "guide:compose": "node ./scripts/compose-guide.mjs"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
