--- a/examples/fastify-mikroorm/package.json
+++ b/examples/fastify-mikroorm/package.json
@@ -16,7 +16,7 @@
     "db:migrate:create": "mikro-orm migration:create"
   },
   "dependencies": {
-    "@bluelibs/runner": "file:../..",
+    "@bluelibs/runner": "^5.2.0",
     "@fastify/cors": "^10.0.1",
     "@fastify/helmet": "^12.0.0",
     "@fastify/swagger": "^9.4.1",
@@ -28,9 +28,9 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@bluelibs/runner-dev": "^4.4.6",
+    "@bluelibs/runner-dev": "^5.0.0",
     "@mikro-orm/cli": "^6.5.2",
-    "@mikro-orm/sqlite": "^5.1.2",
+    "@mikro-orm/sqlite": "^6.5.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
