--- a/examples/tunnels/tunnel-app-example/package.json
+++ b/examples/tunnels/tunnel-app-example/package.json
@@ -17,6 +17,6 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@bluelibs/runner": "file:../../.."
+    "@bluelibs/runner": "^5.2.0"
   }
 }
