--- a/examples/fastify-mikroorm/package.json
+++ b/examples/fastify-mikroorm/package.json
@@ -30,14 +30,14 @@
   "devDependencies": {
     "@bluelibs/runner-dev": "^5.0.0",
     "@mikro-orm/cli": "^6.5.2",
-    "@mikro-orm/sqlite": "^6.5.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@mikro-orm/better-sqlite": "^6.6.6"
   },
   "mikro-orm": {
     "useTsNode": true,
