--- a/src/node/durable/dashboard/package.json
+++ b/src/node/durable/dashboard/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "class-variance-authority": "^0.7.0",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.30.3",
     "react-hook-form": "^7.48.2",
     "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.2",
@@ -24,11 +24,14 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^6.4.1"
+  },
+  "overrides": {
+    "lodash": "^4.17.23"
   }
 }
