refactor(tests): remove unused parameters in async functions across tests refactor(tests): update middleware and resource initializations to use underscore for unused params refactor(validation): clean up validation tests to ignore unused parameters refactor(global): remove unused global tags and simplify event definitions refactor(middleware): streamline requireContext middleware by removing unnecessary variable refactor(event): clean up EventManager by removing unused listener storage refactor(auth): remove AuthRateLimiter and related configurations from exposure refactor(request): simplify request handlers by removing rate limiting logic

--- a/config/ts/tsconfig.json
+++ b/config/ts/tsconfig.json
@@ -13,8 +13,8 @@
     "strict": true,
     "strictNullChecks": true,
     "noImplicitThis": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "skipLibCheck": true,
     "baseUrl": "../..",
     "paths": {
