--- a/package.json
+++ b/package.json
@@ -96,6 +96,9 @@
     "typecheck": "tsc -p config/ts/tsconfig.json --noEmit",
     "lint": "eslint --config config/eslint/eslint.config.mjs ./src",
     "lint:fix": "eslint --config config/eslint/eslint.config.mjs ./src --fix",
+    "audit": "npm audit --audit-level=moderate",
+    "audit:prod": "npm audit --omit=dev --audit-level=high",
+    "audit:full": "npm audit --audit-level=moderate",
     "qa": "npm run coverage:ai && npm run lint:fix && npm run typecheck && npm run build",
     "prepublishOnly": "npm run clean && npm run build && npm run build:dashboard",
     "postbuild": "npm run guide:compose",
@@ -112,16 +115,16 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^27.0.0",
     "@types/node": "^25.2.3",
-    "@typescript-eslint/eslint-plugin": "8.39.0",
-    "@typescript-eslint/parser": "8.39.0",
+    "@typescript-eslint/eslint-plugin": "8.56.0",
+    "@typescript-eslint/parser": "8.56.0",
     "benchmark": "^2.1.4",
     "busboy": "^1.6.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-jest": "^29.11.2",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-unused-imports": "^4.3.0",
-    "express": "^5.1.0",
+    "eslint-plugin-jest": "^29.15.0",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-unused-imports": "^4.4.1",
+    "express": "^5.2.1",
     "globals": "^16.5.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^30.1.2",
@@ -136,7 +139,7 @@
     "typedoc-material-theme": "^1.4.1",
     "typedoc-plugin-pages": "^1.1.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.51.0",
+    "typescript-eslint": "^8.56.0",
     "zod": "^4.0.17"
   },
   "typings": "dist/types/index.d.ts",
@@ -155,12 +158,12 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "cron-parser": "^5.4.0",
     "lru-cache": "^11.1.0"
   },
   "optionalDependencies": {
     "amqplib": "^0.10.9",
     "busboy": "^1.6.0",
-    "cron-parser": "^5.4.0",
     "ioredis": "^5.7.0"
   },
   "prettier": {
