--- a/config/ts/tsconfig.jest.json
+++ b/config/ts/tsconfig.jest.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "isolatedModules": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": false
   }
