--- a/package.json
+++ b/package.json
@@ -96,9 +96,9 @@
     "typecheck": "tsc -p config/ts/tsconfig.json --noEmit",
     "lint": "eslint --config config/eslint/eslint.config.mjs ./src",
     "lint:fix": "eslint --config config/eslint/eslint.config.mjs ./src --fix",
-    "audit": "better-npm-audit audit --level moderate",
+    "audit": "npm audit --audit-level=moderate",
     "audit:prod": "npm audit --omit=dev --audit-level=high",
-    "audit:full": "better-npm-audit audit --level moderate",
+    "audit:full": "npm audit --audit-level=moderate",
     "qa": "npm run coverage:ai && npm run lint:fix && npm run typecheck && npm run build",
     "prepublishOnly": "npm run clean && npm run build && npm run build:dashboard",
     "postbuild": "npm run guide:compose",
@@ -119,7 +119,6 @@
     "@typescript-eslint/eslint-plugin": "8.56.0",
     "@typescript-eslint/parser": "8.56.0",
     "benchmark": "^2.1.4",
-    "better-npm-audit": "^3.11.0",
     "busboy": "^1.6.0",
     "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
@@ -167,9 +166,6 @@
     "amqplib": "^0.10.9",
     "busboy": "^1.6.0",
     "ioredis": "^5.7.0"
-  },
-  "overrides": {
-    "minimatch": "10.2.1"
   },
   "prettier": {
     "trailingComma": "all",
