--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "@types/benchmark": "^2.1.5",
     "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.3",
-    "@types/jest": "^27.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.2.3",
     "@typescript-eslint/eslint-plugin": "8.56.0",
     "@typescript-eslint/parser": "8.56.0",
@@ -127,7 +127,7 @@
     "eslint-plugin-unused-imports": "^4.4.1",
     "express": "^5.2.1",
     "globals": "^16.5.0",
-    "jest": "^29.0.0",
+    "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.1.2",
     "jest-junit": "^10.0.0",
     "prettier": "^3.7.4",
@@ -166,6 +166,10 @@
     "amqplib": "^0.10.9",
     "busboy": "^1.6.0",
     "ioredis": "^5.7.0"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1",
+    "test-exclude": "^7.0.1"
   },
   "prettier": {
     "trailingComma": "all",
